Fix document horizontal scrolling and add favicon

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .flex-row {
     display: flex;
     flex-direction: row;
